Including fix to about us section on mobile version

--- a/newHomepage/css/template-mobile.scss
+++ b/newHomepage/css/template-mobile.scss
@@ -1,6 +1,9 @@
 
 @media only screen and (max-width: 640px) {
 	body{
+		p{
+			font-size: 18px;
+		}
 		.cd-top {
 		  right: 20px;
 		  bottom: 20px;
